# FreeBSD-Electron

./: Makefile  Makefile.tests  README.md  distinfo  pkg-plist
Mk/Uses/: electron.mk  node.mk  npm.mk
audio/astra/: Makefile  distinfo  pkg-descr  pkg-plist
audio/dopamine/: Makefile  distinfo  pkg-descr  pkg-plist
audio/feishin/: Makefile  distinfo  pkg-descr  pkg-plist
audio/moosync/: Makefile  Makefile.crates  distinfo  pkg-descr  pkg-plist
audio/muffon/: Makefile  Makefile.crates  distinfo  pkg-descr  pkg-plist
audio/museeks/: Makefile  Makefile.crates  distinfo  pkg-descr  pkg-plist
audio/nora/: Makefile  Makefile.crates  distinfo  pkg-descr  pkg-plist
audio/nuclear/: Makefile  Makefile.crates  distinfo  pkg-descr  pkg-plist
deskutils/boostnote/: Makefile  distinfo  pkg-descr  pkg-plist
deskutils/joplin-desktop/: Makefile  Makefile.crates  distinfo  pkg-descr  pkg-plist
deskutils/notesnook/: Makefile  distinfo  pkg-descr  pkg-plist
deskutils/simplenote/: Makefile  distinfo  pkg-descr  pkg-plist
deskutils/standardnotes/: Makefile  distinfo  pkg-descr  pkg-plist
deskutils/stretchly/: Makefile  distinfo  pkg-descr  pkg-plist
deskutils/superproductivity/: Makefile  Makefile.crates  distinfo  pkg-descr  pkg-plist
deskutils/ueli/: Makefile  Makefile.crates  distinfo  pkg-descr  pkg-plist
devel/electron10/: Makefile  Makefile.version  distinfo  pkg-plist
devel/electron10/files/: package.json  patch-apps_app__restore__service__browsertest.cc  patch-apps_ui_views_app__window__frame__view.cc  patch-ash_display_mirror__window__controller.cc  patch-base_BUILD.gn  patch-base_allocator_allocator__shim__default__dispatch__to__glibc.cc  patch-base_allocator_allocator__shim__override__libc__symbols.h  patch-base_allocator_allocator__shim__unittest.cc  patch-base_allocator_partition__allocator_page__allocator__internals__posix.h  patch-base_allocator_partition__allocator_partition__alloc__constants.h  patch-base_allocator_partition__allocator_partition__alloc__unittest.cc  patch-base_base__switches.cc  patch-base_base__switches.h  patch-base_cpu.cc  patch-base_debug_debugger__posix.cc  patch-base_debug_elf__reader.cc  patch-base_debug_proc__maps__linux.cc  patch-base_debug_stack__trace.cc  patch-base_debug_stack__trace.h  patch-base_debug_stack__trace__posix.cc  patch-base_debug_stack__trace__unittest.cc  patch-base_files_file__path__unittest.cc  patch-base_files_file__path__watcher.cc  patch-base_files_file__path__watcher__kqueue.h  patch-base_files_file__path__watcher__stub.cc  patch-base_files_file__path__watcher__unittest.cc  patch-base_files_file__util.h  patch-base_files_file__util__posix.cc  patch-base_files_file__util__unittest.cc  patch-base_files_scoped__file.cc  patch-base_i18n_icu__util.cc  patch-base_linux__util.cc  patch-base_location__unittest.cc  patch-base_logging__unittest.cc  patch-base_memory_discardable__memory.cc  patch-base_memory_discardable__memory__internal.h  patch-base_memory_madv__free__discardable__memory__posix.cc  patch-base_memory_platform__shared__memory__region.h  patch-base_memory_platform__shared__memory__region__posix.cc  patch-base_memory_shared__memory__region__unittest.cc  (+874 more)
devel/electron11/: Makefile  Makefile.version  distinfo
devel/electron12/: Makefile  Makefile.version  distinfo
devel/electron13/: Makefile  Makefile.version  distinfo
devel/electron14/: Makefile  Makefile.version  distinfo  pkg-plist
devel/electron14/files/: package.json  patch-BUILD.gn  patch-base_BUILD.gn  patch-base_allocator_partition__allocator_partition__alloc.cc  patch-base_allocator_partition__allocator_partition__alloc__config.h  patch-base_allocator_partition__allocator_partition__alloc__unittest.cc  patch-base_allocator_partition__allocator_starscan_pcscan__internal.cc  patch-base_allocator_partition__allocator_starscan_stack_stack.cc  patch-base_containers_checked__iterators__unittest.cc  patch-base_debug_debugger__posix.cc  patch-base_debug_stack__trace__posix.cc  patch-base_files_file__path__unittest.cc  patch-base_files_file__path__watcher__unittest.cc  patch-base_files_file__util.cc  patch-base_files_file__util.h  patch-base_files_file__util__posix.cc  patch-base_memory_platform__shared__memory__region.h  patch-base_process_launch__posix.cc  patch-base_process_memory__unittest.cc  patch-base_process_process__metrics__posix.cc  patch-base_profiler_stack__copier__signal.cc  patch-base_test_BUILD.gn  patch-base_threading_platform__thread__internal__posix.h  patch-base_threading_platform__thread__posix.cc  patch-base_time_time.cc  patch-base_trace__event_heap__profiler__allocation__context__tracker.cc  patch-base_trace__event_malloc__dump__provider.cc  patch-base_tracing_trace__time.h  patch-build_config_c++_c++.gni  patch-build_config_compiler_BUILD.gn  patch-build_config_ozone.gni  patch-cc_BUILD.gn  patch-chrome_BUILD.gn  patch-chrome_app_BUILD.gn  patch-chrome_app_chrome__main.cc  patch-chrome_app_chrome__main__delegate.cc  patch-chrome_app_generated__resources.grd  patch-chrome_browser_BUILD.gn  patch-chrome_browser_about__flags.cc  patch-chrome_browser_background_background__mode__manager.cc  (+284 more)
devel/electron15/: Makefile  Makefile.version  distinfo  pkg-plist
devel/electron16/: Makefile  Makefile.version  distinfo  pkg-plist
files/: apply-electron-patches.sh  patch-chrome_browser_ui_startup_startup__browser__creator.cc  patch-content_public_common_content__switches.cc  patch-content_public_common_content__switches.h  patch-content_renderer_render__thread__impl.cc  patch-electron_BUILD.gn  patch-electron_atom_app_atom__main__delegate.cc  patch-electron_atom_browser_api_atom__api__app.cc  patch-electron_atom_browser_api_atom__api__web__contents.cc  patch-electron_atom_browser_native__window__views.cc  patch-electron_chromium__src_chrome_browser_process__singleton__posix.cc  patch-services_network_network__service.cc  patch-third__party_boringssl_src_crypto_cpu-aarch64-linux.c  patch-third__party_crc32c_src_src_crc32c__arm64__linux__check.h  patch-third__party_zlib_arm__features.c  patch-v8_BUILD.gn
misc/gerbil/: Makefile  (+3 more)
(+4498 files in other folders)
