--- chrome/browser/BUILD.gn.orig	2021-01-23 01:42:15 UTC
+++ chrome/browser/BUILD.gn
@@ -4582,7 +4582,7 @@ static_library("browser") {
     ]
   }
 
-  if (is_posix && !is_mac) {
+  if (is_posix && !is_mac && !is_bsd) {
     # TODO(crbug.com/753619): Enable crash reporting on Fuchsia.
     sources += [
       "//chrome/app/chrome_crash_reporter_client.cc",
