--- device/bluetooth/BUILD.gn.orig	2020-09-21 18:39:17 UTC
+++ device/bluetooth/BUILD.gn
@@ -275,7 +275,7 @@ component("bluetooth") {
     ]
   }
 
-  if (is_chromeos || is_linux) {
+  if (is_chromeos || (is_linux && !is_bsd)) {
     if (use_dbus) {
       sources += [
         "bluez/bluetooth_adapter_bluez.cc",
