--- electron/BUILD.gn.orig	2021-01-14 16:50:03 UTC
+++ electron/BUILD.gn
@@ -434,7 +434,7 @@ source_set("electron_lib") {
       "*\bviews/*",
     ]
   }
-  if (!is_mas_build) {
+  if (!is_mas_build && !is_bsd) {
     deps += [ "//components/crash/core/app" ]
   }
 
@@ -454,7 +454,7 @@ source_set("electron_lib") {
     ]
   }
 
-  if (is_linux) {
+  if (is_linux && !is_bsd) {
     deps += [ "//components/crash/content/browser" ]
   }
 
@@ -1068,7 +1068,7 @@ if (is_mac) {
       ":electron_app_manifest",
       ":electron_lib",
       ":packed_resources",
-      "//components/crash/core/app",
+      # "//components/crash/core/app",
       "//content:sandbox_helper_win",
       "//electron/buildflags",
       "//ui/strings",
