--- extensions/shell/BUILD.gn.orig	2020-09-21 18:39:18 UTC
+++ extensions/shell/BUILD.gn
@@ -195,7 +195,7 @@ source_set("app_shell_lib") {
     }
   }
 
-  if (is_desktop_linux) {
+  if (is_desktop_linux && !is_bsd) {
     sources += [
       "app/shell_crash_reporter_client.cc",
       "app/shell_crash_reporter_client.h",
