--- services/service_manager/sandbox/BUILD.gn.orig	2020-09-21 18:39:22 UTC
+++ services/service_manager/sandbox/BUILD.gn
@@ -26,7 +26,7 @@ component("sandbox") {
     "//base",
     "//sandbox:common",
   ]
-  if (is_linux) {
+  if (is_linux && !is_bsd) {
     sources += [
       "linux/bpf_audio_policy_linux.cc",
       "linux/bpf_audio_policy_linux.h",
