--- third_party/blink/renderer/BUILD.gn.orig	2020-09-21 18:39:24 UTC
+++ third_party/blink/renderer/BUILD.gn
@@ -45,8 +45,8 @@ config("inside_blink") {
       "-Wconversion",
       "-Wno-float-conversion",
       "-Wno-sign-conversion",
-      "-Wno-implicit-float-conversion",
-      "-Wno-implicit-int-conversion",
+#      "-Wno-implicit-float-conversion",
+#      "-Wno-implicit-int-conversion",
     ]
 
     if (!is_chromeos || default_toolchain != "//build/toolchain/cros:target") {
