--- third_party/sqlite/BUILD.gn.orig	2020-09-21 18:39:57 UTC
+++ third_party/sqlite/BUILD.gn
@@ -138,7 +138,7 @@ config("sqlite_warnings") {
       ]
     }
   }
-  if (is_linux) {
+  if (is_linux && !is_bsd) {
     cflags += [
       # SQLite doesn't believe in compiler warnings, preferring testing.
       # http://www.sqlite.org/faq.html#q17
