--- third_party/webrtc/system_wrappers/BUILD.gn.orig	2020-09-21 18:42:22 UTC
+++ third_party/webrtc/system_wrappers/BUILD.gn
@@ -59,8 +59,6 @@ rtc_library("system_wrappers") {
     if (!build_with_chromium) {
       deps += [ ":cpu_features_linux" ]
     }
-
-    libs += [ "rt" ]
   }
 
   if (is_win) {
