--- weblayer/BUILD.gn.orig	2020-09-21 18:40:10 UTC
+++ weblayer/BUILD.gn
@@ -592,6 +592,14 @@ source_set("weblayer_lib_base") {
     ]
   }
 
+  if (is_bsd) {
+    deps -= [
+      "//components/crash/content/browser",
+      "//components/crash/core/app",
+      "//components/crash/core/common",
+    ]
+  }
+
   if (toolkit_views) {
     deps += [ "//ui/views" ]
   }
