--- build/config/c++/c++.gni.orig	2021-09-14 01:51:47 UTC
+++ build/config/c++/c++.gni
@@ -45,7 +45,7 @@ declare_args() {
 
 use_custom_libcxx =
     use_custom_libcxx || (use_custom_libcxx_for_host && !is_a_target_toolchain)
-use_custom_libcxx = use_custom_libcxx && !is_nacl
+use_custom_libcxx = use_custom_libcxx && !is_nacl && !is_bsd
 
 declare_args() {
   # WARNING: Setting this to a non-default value is highly discouraged.
