--- build/config/compiler/BUILD.gn.orig	2021-09-14 01:51:47 UTC
+++ build/config/compiler/BUILD.gn
@@ -139,7 +139,7 @@ declare_args() {
   #
   # TODO(crbug.com/1131993): Enabling this when 'is_android' is true breaks
   # content_shell_test_apk on both ARM and x86.
-  init_stack_vars = !is_android
+  init_stack_vars = !is_android && !is_bsd
 
   # This argument is to control whether enabling text section splitting in the
   # final binary. When enabled, the separated text sections with prefix
@@ -238,7 +238,7 @@ config("default_include_dirs") {
 # Compiler instrumentation can introduce dependencies in DSOs to symbols in
 # the executable they are loaded into, so they are unresolved at link-time.
 config("no_unresolved_symbols") {
-  if (!using_sanitizer &&
+  if (!using_sanitizer && !is_bsd &&
       (is_linux || is_chromeos || is_android || is_fuchsia)) {
     ldflags = [
       "-Wl,-z,defs",
@@ -354,7 +354,7 @@ config("compiler") {
     }
 
     # Linker warnings.
-    if (fatal_linker_warnings && !is_apple && current_os != "aix") {
+    if (fatal_linker_warnings && !is_apple && !is_bsd && current_os != "aix") {
       ldflags += [ "-Wl,--fatal-warnings" ]
     }
     if (fatal_linker_warnings && is_apple) {
@@ -530,7 +530,7 @@ config("compiler") {
     ldflags += [ "-Wl,-z,keep-text-section-prefix" ]
   }
 
-  if (is_clang && !is_nacl && !use_xcode_clang) {
+  if (is_clang && !is_nacl && !use_xcode_clang && !is_bsd) {
     cflags += [ "-fcrash-diagnostics-dir=" + clang_diagnostic_dir ]
 
     # TODO(hans): Remove this once Clang generates better optimized debug info
@@ -673,7 +673,12 @@ config("compiler") {
       # and let it use all cores.
       # TODO(thakis): Check if '=0' (that is, number of cores, instead
       # of "all" which means number of hardware threads) is faster.
-      ldflags += [ "-Wl,--thinlto-jobs=all" ]
+      if (is_bsd) {
+        # FreeBSD < 13 uses LLVM 10, which doesn't support --thinlto-jobs=all
+        ldflags += [ "-Wl,--thinlto-jobs=2" ]
+      } else {
+        ldflags += [ "-Wl,--thinlto-jobs=all" ]
+      }
 
       ldflags += [
         "-Wl,--thinlto-cache-dir=" +
@@ -867,7 +872,7 @@ config("compiler_cpu_abi") {
         cflags += [ "-mtune=$arm_tune" ]
       }
     } else if (current_cpu == "arm64") {
-      if (is_clang && !is_android && !is_nacl && !is_fuchsia) {
+      if (is_clang && !is_android && !is_nacl && !is_fuchsia && !is_bsd) {
         cflags += [ "--target=aarch64-linux-gnu" ]
         ldflags += [ "--target=aarch64-linux-gnu" ]
       }
@@ -1194,6 +1199,9 @@ config("compiler_deterministic") {
         "/D__TIME__=",
         "/D__TIMESTAMP__=",
       ]
+    } else if (is_bsd) {
+      # -ffile-compilation-dir is not supported in the LLVM version FreeBSD ships
+      cflags += [ "-fdebug-compilation-dir=." ]
     } else {
       cflags += [
         "-Wno-builtin-macro-redefined",
@@ -1594,7 +1602,7 @@ config("default_warnings") {
         cflags += [ "-Wno-nonportable-include-path" ]
       }
 
-      if (current_toolchain == host_toolchain || !use_xcode_clang) {
+      if ((current_toolchain == host_toolchain || !use_xcode_clang) && !is_bsd) {
         # Flags NaCl (Clang 3.7) and Xcode 9.2 (Clang clang-900.0.39.2) do not
         # recognize.
         cflags += [
@@ -1635,6 +1643,18 @@ config("default_warnings") {
           cflags += [ "-Wmax-tokens" ]
         }
       }
+
+      if (is_clang && is_bsd) {
+        cflags += [
+          "-Wno-ignored-pragma-optimize",
+          "-Wno-implicit-int-float-conversion",
+          "-Wno-final-dtor-non-final-class",
+          "-Wno-builtin-assume-aligned-alignment",
+          "-Wno-deprecated-copy",
+          "-Wno-thread-safety-analysis",
+          "-Wno-thread-safety-attributes",
+        ]
+      }
     }
   }
 }
@@ -1773,7 +1793,7 @@ config("no_chromium_code") {
       # third-party libraries.
       "-Wno-c++11-narrowing",
     ]
-    if (!is_nacl && (current_toolchain == host_toolchain || !use_xcode_clang)) {
+    if (!is_nacl && (current_toolchain == host_toolchain || !use_xcode_clang) && !is_bsd) {
       cflags += [
         # TODO(https://crbug.com/1202159): Clean up and enable.
         "-Wno-misleading-indentation",
@@ -1853,7 +1873,7 @@ config("thin_archive") {
   # archives.
   # TODO(crbug.com/1221615): Enable on is_apple if use_lld once that no longer
   # confuses lldb.
-  if ((is_posix && !is_nacl && !is_apple) || is_fuchsia) {
+  if ((is_posix && !is_nacl && !is_apple && !is_bsd) || is_fuchsia) {
     arflags = [ "-T" ]
   } else if (is_win && use_lld) {
     arflags = [ "/llvmlibthin" ]
@@ -2389,7 +2409,7 @@ config("symbols") {
     # flag, so we can use use -g1 for pnacl and nacl-clang compiles.
     # gcc nacl is is_nacl && !is_clang, pnacl and nacl-clang are && is_clang.
     if (!is_nacl || is_clang) {
-      cflags += [ "-g2" ]
+      cflags += [ "-g0" ]
     }
 
     if (is_apple) {
@@ -2414,7 +2434,7 @@ config("symbols") {
     # DWARF info may be corrupt; offsets in a range list entry are in different
     # sections" there.  Maybe just a bug in nacl_switch_32.S.
     if (!is_apple && !is_nacl && current_cpu != "x86" &&
-        (use_gold || use_lld)) {
+        (use_gold || use_lld) && !is_bsd) {
       if (is_clang) {
         # This flag enables the GNU-format pubnames and pubtypes sections,
         # which lld needs in order to generate a correct GDB index.
@@ -2427,7 +2447,7 @@ config("symbols") {
   }
 
   # TODO(https://crbug.com/1050118): Investigate missing debug info on mac.
-  if (is_clang && !is_nacl && !use_xcode_clang && !is_apple) {
+  if (is_clang && !is_nacl && !use_xcode_clang && !is_apple && !is_bsd) {
     # Use constructor homing for debug info. This option reduces debug info
     # by emitting class type info only when constructors are emitted.
     cflags += [
