--- build/config/ozone.gni.orig	2021-09-14 01:51:47 UTC
+++ build/config/ozone.gni
@@ -82,6 +82,9 @@ declare_args() {
     } else if (is_chromeos_lacros) {
       ozone_platform = "wayland"
       ozone_platform_wayland = true
+    } else if (is_bsd) {
+      ozone_platform = "x11"
+      ozone_platform_x11 = true
     } else if (is_linux) {
       ozone_platform = "x11"
       ozone_platform_wayland = true
