--- cc/BUILD.gn.orig	2021-09-14 01:51:47 UTC
+++ cc/BUILD.gn
@@ -644,7 +644,7 @@ cc_test_static_library("test_support") {
   if (enable_vulkan) {
     deps += [ "//gpu/vulkan/init" ]
   }
-  if (!is_android) {
+  if (!is_android && !is_bsd) {
     data_deps = [ "//third_party/mesa_headers" ]
   }
 }
@@ -862,7 +862,6 @@ cc_test("cc_unittests") {
   ]
   data_deps = [
     "//testing/buildbot/filters:cc_unittests_filters",
-    "//third_party/mesa_headers",
   ]
 
   if (is_fuchsia) {
