--- chrome/app/BUILD.gn.orig	2021-09-14 01:51:48 UTC
+++ chrome/app/BUILD.gn
@@ -137,7 +137,7 @@ static_library("test_support") {
     "//v8:v8_headers",
   ]
 
-  if (!is_fuchsia) {
+  if (!is_fuchsia && !is_bsd) {
     # TODO(crbug.com/1226159): Complete crash reporting integration on Fuchsia.
     deps += [
       "//components/crash/core/app",
