--- chrome/browser/ui/BUILD.gn.orig	2021-09-14 01:51:51 UTC
+++ chrome/browser/ui/BUILD.gn
@@ -622,6 +622,17 @@ static_library("ui") {
     "//v8:v8_version",
   ]
 
+  if (is_bsd) {
+    sources -= [
+      "webui/crashes_ui.cc",
+      "webui/crashes_ui.h",
+    ]
+    deps -= [
+      "//components/crash/core/app",
+      "//components/crash/core/browser",
+    ]
+  }
+
   # TODO(crbug/925153): Remove this circular dependency.
   allow_circular_includes_from = [
     # TODO(crbug.com/1158905): Remove this circular dependency.
@@ -3479,7 +3490,7 @@ static_library("ui") {
     }
   }
 
-  if (is_linux || is_chromeos_lacros || is_mac) {
+  if ((is_linux || is_chromeos_lacros || is_mac) && !is_bsd) {
     # The first run dialog shows only on Linux and macOS.
     sources += [
       "views/first_run_dialog.cc",
