--- chrome/common/BUILD.gn.orig	2021-09-14 01:51:52 UTC
+++ chrome/common/BUILD.gn
@@ -250,6 +250,10 @@ static_library("common") {
     "//components/page_load_metrics/common:common",
   ]
 
+  if (is_bsd) {
+    deps -= [ "//components/crash/core/app" ]
+  }
+
   if (enable_pdf) {
     deps += [ "//components/pdf/common" ]
   }
@@ -487,13 +491,21 @@ static_library("common") {
     public_deps += [ "//chrome/common/safe_browsing" ]
   }
 
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     sources += [
       "auto_start_linux.cc",
       "auto_start_linux.h",
       "multi_process_lock_linux.cc",
     ]
     deps += [ "//sandbox/linux:sandbox_services" ]
+  }
+
+  if (is_bsd) {
+    sources += [
+      "auto_start_linux.cc",
+      "auto_start_linux.h",
+      "multi_process_lock_linux.cc",
+    ]
   }
 
   if (enable_cdm_host_verification) {
