--- chrome/test/BUILD.gn.orig	2021-11-21 11:49:08 UTC
+++ chrome/test/BUILD.gn
@@ -332,6 +332,10 @@ static_library("test_support") {
     "//ui/gl",
   ]
 
+  if (is_bsd) {
+    public_deps -= [ "//components/crash/core/app" ]
+  }
+
   data_deps = []
 
   if (is_chromeos_lacros && also_build_ash_chrome) {
@@ -2108,7 +2112,7 @@ if (!is_android) {
       ]
     }
 
-    if (is_linux || is_chromeos) {
+    if ((is_linux || is_chromeos) && !is_bsd) {
       sources += [
         "../browser/error_reporting/webui_js_error_reporting_browsertest.cc",
       ]
@@ -6281,7 +6285,7 @@ test("unit_tests") {
     ]
   }
 
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     deps += [ "//chrome/browser/error_reporting:unit_test" ]
   }
 
@@ -8348,7 +8352,7 @@ test("chrome_app_unittests") {
     "//components/safe_browsing:buildflags",
     "//pdf:pdf_ppapi",
   ]
-  if (!is_fuchsia) {
+  if (!is_fuchsia && !is_bsd) {
     deps += [ "//third_party/breakpad:client" ]
   }
   if (enable_gwp_asan) {
