--- device/bluetooth/BUILD.gn.orig	2021-09-14 01:51:57 UTC
+++ device/bluetooth/BUILD.gn
@@ -9,7 +9,7 @@ if (is_android) {
 }
 if (is_chromeos_ash) {
   import("//chromeos/dbus/use_real_dbus_clients.gni")
-} else if (use_dbus) {
+} else if (use_dbus && !is_bsd) {
   use_real_dbus_clients = false
 }
 
@@ -307,7 +307,7 @@ component("bluetooth") {
     ]
   }
 
-  if (is_chromeos || is_linux) {
+  if (is_chromeos || (is_linux && !is_bsd)) {
     if (use_dbus) {
       sources += [
         "bluetooth_adapter_chromeos.cc",
