--- net/BUILD.gn.orig	2021-09-14 01:51:59 UTC
+++ net/BUILD.gn
@@ -100,7 +100,7 @@ net_configs = [
   "//build/config/compiler:wexit_time_destructors",
 ]
 
-if (is_linux || is_chromeos) {
+if ((is_linux || is_chromeos) && !is_bsd) {
   net_configs += [ "//build/config/linux:libresolv" ]
 }
 
@@ -1202,7 +1202,7 @@ component("net") {
     ]
   }
 
-  if (is_linux || is_chromeos || is_android) {
+  if ((is_linux || is_chromeos || is_android) && !is_bsd) {
     sources += [
       "base/address_tracker_linux.cc",
       "base/address_tracker_linux.h",
@@ -1212,6 +1212,12 @@ component("net") {
     ]
   }
 
+  if (is_bsd) {
+    sources += [
+      "base/platform_mime_util_linux.cc",
+    ]
+  }
+
   if (is_mac) {
     sources += [
       "base/network_notification_thread_mac.cc",
@@ -1348,7 +1354,7 @@ component("net") {
     }
   }
 
-  if (is_android || is_chromeos_ash) {
+  if (is_android || is_chromeos_ash || is_bsd) {
     sources += [
       "base/network_change_notifier_posix.cc",
       "base/network_change_notifier_posix.h",
@@ -1381,7 +1387,7 @@ component("net") {
   }
 
   # Use getifaddrs() on POSIX platforms, except Linux.
-  if (is_posix && !is_linux && !is_chromeos) {
+  if ((is_posix && !is_linux && !is_chromeos) || is_bsd) {
     sources += [
       "base/network_interfaces_getifaddrs.cc",
       "base/network_interfaces_getifaddrs.h",
@@ -4708,7 +4714,7 @@ test("net_unittests") {
   }
 
   # Use getifaddrs() on POSIX platforms, except Linux and Android.
-  if (is_posix && !is_linux && !is_chromeos && !is_android) {
+  if ((is_posix && !is_linux && !is_chromeos && !is_android) || is_bsd) {
     sources += [ "base/network_interfaces_getifaddrs_unittest.cc" ]
   }
 
